--- a/app/views/practices/index.html.erb
+++ b/app/views/practices/index.html.erb
@@ -41,3 +41,4 @@
 <%= render :partial => 'shared/confirm_dialog' %>
 <%= render :partial => 'shared/new_practice_dialog' %>
 <%= render :partial => 'shared/new_event_dialog' %>
+<%= render :partial => 'shared/practice_share_dialog' %>
