add share practices boolean to subscription plan

--- a/app/views/admin/subscription_plans/_form.html.erb
+++ b/app/views/admin/subscription_plans/_form.html.erb
@@ -20,6 +20,10 @@
     <%= f.label :max_practices %><br />
     <%= f.text_field :max_practices %>
   </div>
+  <div class="field">
+    <%= f.label :share_practices %><br />
+    <%= f.check_box :share_practices %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
