--- a/app/views/admin/subscription_plans/index.html.erb
+++ b/app/views/admin/subscription_plans/index.html.erb
@@ -7,6 +7,7 @@
     <th>Interval</th>
     <th>Available</th>
     <th>Max practices</th>
+    <th>Share practices</th>
     <th></th>
     <th></th>
     <th></th>
@@ -19,6 +20,7 @@
     <td><%= subscription_plan.interval %></td>
     <td><%= subscription_plan.available %></td>
     <td><%= subscription_plan.max_practices %></td>
+    <td><%= subscription_plan.share_practices %></td>
     <td><%= link_to 'Show', [:admin, subscription_plan] %></td>
     <td><%= link_to 'Edit', edit_admin_subscription_plan_path(subscription_plan) %></td>
     <td><%= link_to 'Destroy', [:admin, subscription_plan], {:confirm => 'Are you sure?', :method => :delete} %></td>
