--- a/app/views/practice_shares/_dialog_form.html.erb
+++ b/app/views/practice_shares/_dialog_form.html.erb
@@ -2,7 +2,9 @@
   <%= f.label :email %><br/>
   <%= f.text_field :email, :autocomplete => 'off' %>
   <%= render :partial => 'shared/external_contact_links' %>
-  <%= f.submit 'Share', :class => 'awesome medium blue', :id => 'share_button' %>
+  <div class='buttons'>
+    <%= f.submit 'Share', :class => 'awesome medium blue', :id => 'share_button' %>
+  </div>
 <% end %>
 
 <%= javascript_tag do %>
