--- a/app/views/practice_shares/_dialog_form.html.erb
+++ b/app/views/practice_shares/_dialog_form.html.erb
@@ -2,6 +2,7 @@
   <%= f.label :email %><br/>
   <%= f.text_field :email, :autocomplete => 'off' %>
   <%= render :partial => 'shared/external_contact_links' %>
+  <p><%= t('practice_shares.share_practice_dialog.select_sadhana_contacts', :sadhana_contacts => "<a href='/contacts/select' onclick=\"popUp(this.href,\'console\',400,400); return false;\" target='_blank'>#{t('practice_shares.dialog_form.sadhana_contacts')}</a>").html_safe %></p>
   <div class='buttons'>
     <%= f.submit 'Share', :class => 'awesome medium blue', :id => 'share_button' %>
   </div>
