undo message on practice delete

--- a/app/views/practices/_practice.html.erb
+++ b/app/views/practices/_practice.html.erb
@@ -53,11 +53,10 @@
                 $.ajax({
                     type:'post',
                     data: { '_method': 'delete' },
-                    dataType: 'json',
+                    dataType: 'script',
                     url: '/practices/#{practice.id}',
                     success: function(data) {
                       $('#practice_#{practice.id}').fadeOut('slow', function() {
-                          $('#practice_#{practice.id}').remove();
                       });
                     }
                 });
