--- a/app/views/external_contacts/index.html.erb
+++ b/app/views/external_contacts/index.html.erb
@@ -1,6 +1,6 @@
-<ul id="invite_contacts">
+<ul id="invite_contacts" class="element-list">
 <% @contacts.each do |contact| %>
-  <li class="contact">
+  <li class="element contact">
     <h3><%= contact.name %></h3>
     <p><%= contact.email %></p>
   </li>
