--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -122,6 +122,7 @@ input[type='submit'].awesome {
     border-left-width: 0;
     font-size: 11px;
     font-weight: bold;
+    font-family: Verdana;
 }
 
 .gecko input[type='submit'].awesome {
