filter asanas by category

--- a/app/views/techniques/_techniques_list.html.erb
+++ b/app/views/techniques/_techniques_list.html.erb
@@ -1,3 +1,31 @@
+<% if technique_type.symbol == 'asana' %>
+  <%
+   grouped_options = [
+      ['By family', [["By family", ""]]],
+      ['By category', TechniqueCategory.all.collect {|t| [t.name, t.id]}]
+    ]
+   selected = @technique_category.present? ? @technique_category.id : nil
+   Rails.logger.debug selected
+  %>
+  <%= select_tag "asana_search", grouped_options_for_select(grouped_options, selected) %>
+  <%= javascript_tag do %>
+    $('#asana_search').change(function(){
+      $.ajax({
+        type:'get',
+        data: { 'symbol': 'asana', 'category_id': this.value },
+        dataType: 'html',
+        url: '/techniques',
+        success: function(data){
+          jQuery.jStore.set(technique_type_symbol, data);
+          cached_techniques = data;
+          $('#' + technique_type_symbol + '_techniques_viewport').html(cached_techniques);
+          Practices.accordion_draggable($('.ui-tabs-selected a').attr('href'), $('.ui-tabs-selected').attr('primary_technique_type'), $('.ui-tabs-selected').attr('secondary_technique_types'));
+          Practices.qs.cache();
+        }
+      });
+    });
+  <% end %>
+<% end %>
 <div id='<%= technique_type.symbol %>_techniques_list' class='techniques-list'>
   <% techniques.each do |technique| %>
     <div class='<%= technique_type.symbol %> technique practice_technique' technique_id='<%= technique.id %>'><%= image_tag technique.photo.url(:thumb, false) %><h3><%= link_to_function technique.name, "$.ajax({type:'get', dataType: 'script', url: '/techniques/#{technique.id}'});" %></h3></div>
