--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -23,7 +23,9 @@
 <ul class='menu'>
   <li><%= link_to 'Parts', admin_parts_path %></li>
   <li><%= link_to 'Subscriptions', admin_subscriptions_path %></li>
+  <li><%= link_to 'SubscriptionPlans', admin_subscription_plans_path %></li>
   <li><%= link_to 'TechniqueTypes', admin_technique_types_path %></li>
+  <li><%= link_to 'TechniqueCategories', admin_technique_categories_path %></li>
   <li><%= link_to 'Techniques', admin_techniques_path %></li>
 </ul>
 
