--- a/app/views/techniques/_techniques_list.html.erb
+++ b/app/views/techniques/_techniques_list.html.erb
@@ -1,8 +1,8 @@
 <% if technique_type.symbol == 'asana' %>
   <%
    grouped_options = [
-      ['By family', [["By family", ""]]],
-      ['By category', TechniqueCategory.all.collect {|t| [t.name, t.id]}]
+      [t('techniques.techniques_list.by_family'), [[t('techniques.techniques_list.by_family'), ""]]],
+      [t('techniques.techniques_list.by_category'), TechniqueCategory.all.collect {|t| [t.name, t.id]}]
     ]
    selected = @technique_category.present? ? @technique_category.id : nil
    Rails.logger.debug selected
