--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -157,7 +157,7 @@ div[aria-labelledby = 'ui-dialog-title-edit_profile_dialog'] .ui-dialog-content,
 }
 
 #edit_profile_dialog .ui-tabs-nav .ui-state-active {
-  background: #EEE url(http://localhost:3000/stylesheets/ui-lightness/images/ui-bg_highlight-soft_100_eeeeee_1x100.png) repeat-x 20% 10%;
+  background: #EEE url(/stylesheets/ui-lightness/images/ui-bg_highlight-soft_100_eeeeee_1x100.png) repeat-x 20% 10%;
 
 }
 
@@ -258,7 +258,7 @@ div[aria-labelledby = 'ui-dialog-title-edit_profile_dialog'] .ui-dialog-content,
 .ui-widget-content .ui-icon.ui-icon-calendar {
   position: absolute;
   margin: 5px;
-  background-image: url(http://local.sadhana.com.ar/stylesheets/ui-lightness/images/ui-icons_ef8c08_256x240.png);
+  background-image: url(/stylesheets/ui-lightness/images/ui-icons_ef8c08_256x240.png);
 }
 
 #practice_event_start_string {
