--- a/public/stylesheets/practices.css
+++ b/public/stylesheets/practices.css
@@ -330,7 +330,7 @@ span#jeditable_description input {
 }
 
 #play_controls .ui-icon {
-  background-image: url(http://localhost:3000/stylesheets/ui-lightness/images/ui-icons_888888_256x240.png);
+  background-image: url(/stylesheets/ui-lightness/images/ui-icons_888888_256x240.png);
 }
 
 #countdown {
@@ -441,7 +441,7 @@ div[aria-labelledby = 'ui-dialog-title-edit_practice_dialog'] .ui-dialog-content
 }
 
 #edit_practice_dialog .ui-tabs-nav .ui-state-active {
-  background: #EEE url(http://localhost:3000/stylesheets/ui-lightness/images/ui-bg_highlight-soft_100_eeeeee_1x100.png) repeat-x 20% 10%;
+  background: #EEE url(/stylesheets/ui-lightness/images/ui-bg_highlight-soft_100_eeeeee_1x100.png) repeat-x 20% 10%;
 }
 
 #practice-ui-tab-dialog-close {
